test/error/binary_opr_struct.colgm
struct A {
    a: i32
}

func main() -> i32 {
    var a = A {};
    var b = A {};
    var c = a + b;
    return 0;
}