test/error/binary_opr_struct.result
Error: cannot calculate "A"
  --> test/error/binary_opr_struct.colgm:8:13
  | 
8 |     var c = a + b;
  |             ^

Warning: unused variable "c"
  --> test/error/binary_opr_struct.colgm:8:5
  | 
8 |     var c = a + b;
  |     ^^^^^^^^^^^^^